--- a/etcd/docker-compose.yml
+++ b/etcd/docker-compose.yml
@@ -1,12 +1,9 @@
-x-variables:
-    flag_initial_cluster_token: &flag_initial_cluster_token '--initial-cluster-token=mys3cr3ttok3n'
-    common_settings: &common_settings
-        image: quay.io/coreos/etcd:v3.5.13
-        entrypoint: /usr/local/bin/etcd
+version: '3.7'  # 명시적으로 버전을 설정
 
 services:
     etcd-1:
-        <<: *common_settings
+        image: quay.io/coreos/etcd:v3.5.13
+        entrypoint: /usr/local/bin/etcd
         ports:
             - "52988:2379"
         command:
@@ -19,12 +16,13 @@ services:
             - '--election-timeout=1250'
             - '--initial-cluster=etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380'
             - '--initial-cluster-state=new'
-            - *flag_initial_cluster_token
+            - '--initial-cluster-token=mys3cr3ttok3n'
         volumes:
             - etcd1:/etcd_data
 
     etcd-2:
-        <<: *common_settings
+        image: quay.io/coreos/etcd:v3.5.13
+        entrypoint: /usr/local/bin/etcd
         ports:
             - "52989:2379"
         command:
@@ -37,12 +35,13 @@ services:
             - '--election-timeout=1250'
             - '--initial-cluster=etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380'
             - '--initial-cluster-state=new'
-            - *flag_initial_cluster_token
+            - '--initial-cluster-token=mys3cr3ttok3n'
         volumes:
             - etcd2:/etcd_data
 
     etcd-3:
-        <<: *common_settings
+        image: quay.io/coreos/etcd:v3.5.13
+        entrypoint: /usr/local/bin/etcd
         ports:
             - "52990:2379"
         command:
@@ -55,7 +54,7 @@ services:
             - '--election-timeout=1250'
             - '--initial-cluster=etcd-1=http://etcd-1:2380,etcd-2=http://etcd-2:2380,etcd-3=http://etcd-3:2380'
             - '--initial-cluster-state=new'
-            - *flag_initial_cluster_token
+            - '--initial-cluster-token=mys3cr3ttok3n'
         volumes:
             - etcd3:/etcd_data
 
